src/cli/workspace/export/snapshots/pixi__cli__workspace__export__conda_environment__tests__test_export_conda_env_yaml_with_defaults.snap
---
source: src/cli/workspace/export/conda_environment.rs
expression: env_yaml.unwrap().to_yaml_string()
---
name: default
channels:
- main
dependencies:
- python ==3.9
