src/cli/workspace/export/snapshots/pixi__cli__workspace__export__conda_environment__tests__test_export_conda_env_yaml_with_pip_find_links.snap
---
source: src/cli/workspace/export/conda_environment.rs
expression: env_yaml.unwrap().to_yaml_string()
---
name: default
channels:
- conda-forge
- nodefaults
dependencies:
- python ==3.12
- pip
- pip:
  - --index-url https://pypi.org/simple
  - --find-links ./links
  - requests==2.31.0
