src/cli/workspace/export/snapshots/pixi__cli__workspace__export__conda_environment__tests__test_export_conda_env_yaml_with_source_editable.snap
---
source: src/cli/workspace/export/conda_environment.rs
expression: env_yaml.unwrap().to_yaml_string()
---
name: default
channels:
- conda-forge
- nodefaults
dependencies:
- python *
- pip
- pip:
  - rich~=13.7
  - flask @ git+https://github.com/pallets/flask
  - requests @ git+https://github.com/psf/requests.git@147c8511ddbfa5e8f71bbf5c18ede0c4ceb3bba4
  - -e ./minimal-project
  - click @ https://github.com/pallets/click/releases/download/8.1.7/click-8.1.7-py3-none-any.whl
  - pytest @ git+https://github.com/pytest-dev/pytest.git
